# svg_renderer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
docs/: next-steps.md  svg_renderer_design.md
src/examples/: __init__.py  combine_layers.py  export_layer.py  render_layer.py
src/svg_renderer/: __init__.py  __main__.py  api.py  cli.py  layer.py  parser.py  renderer.py  style.py  writer.py
tests/: conftest.py  test_layer_extractor.py  test_renderer.py  test_style_parser.py  test_svg_parser.py
tests/fixtures/: generate_expected_pngs.py
