[project]
name = "svg-renderer"
version = "0.1.0"
description = "SVG rendering and manipulation tool for Inkscape SVG files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml",
    "pycairo",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

# Custom option: maximum allowed image difference ratio (0.0-1.0)
# Current tests achieve 100% match with Inkscape output
# 1e-6 = 0.0001% tolerance (allows ~35 pixels difference on A4 size image)
image_diff_threshold = 1e-6
